css/site.css
body{
    font-family: 'Poppins', sans-serif;
    background:#fafafa;
}

.container{
    display:grid;
    grid-template-columns: 280px 1fr;
    gap: 20px;
    padding: 20px;
}

.top-bar {
    background:#2a190a;
    color: #FFF;
    padding: 20px 10px;
}

.top-bar-content{
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo {
    color: #FFF;
    text-decoration: none;
    font-family: 'Cormorant Garamond', serif;
    font-weight: 600;
    font-size: 26px;
}

/* .logo img {
    width: 120px;
} */

.hero {
    position: relative;
    overflow: hidden;
    padding: 80px 20px;
    color: #fff;
}

.hero::before {
    content: "";
    background-image: url('../imagens/background-roupas-no-cabide.png'); /* Substitua pelo caminho da sua imagem */
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    
    /* Faz a imagem ocupar 100% do tamanho do bloco */
    position: absolute;
    top: 0; 
    left: 0; 
    width: 100%; 
    height: 100%;
    
    opacity: 0.4;
    z-index: -1;
}

.hero-content {
    color:#2a190a;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.filtros{
    background:white;
    padding:20px;
    border-radius:10px;
}

.filtros select,
.filtros input{
    width:100%;
    margin-bottom:12px;
    padding:10px;
}

input.busca{
    height: 40px;
    width: 100%;
    padding: 10px 20px;
    border: 1px solid #ccc;
    border-radius: 6px;
}

.grid-produtos{
    display:grid;
    grid-template-columns:
        repeat(auto-fill,minmax(250px,1fr));
    gap:20px;
}

.card{
    position:relative;
    border-radius:12px;
    padding:15px;
    display: flex;
    flex-direction: column;
    gap: 8px;
    color: #222;
    background: #efefef;
    border: solid 1px #ddd;
    box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.08), 0 10px 25px -5px rgba(0, 0, 0, 0.05);
    margin-top: 8px;
}

.link-principal::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1; /* Cobre todo o card */
}

.link-principal {
    text-decoration: none;
    color: #222;
}

.card img{
    width:100%;
    height:200px;
    object-fit:cover;
}

.categoria {
    color: #666;
    font-size: 0.8rem;
}

.estado {
    color: #666;
}

.preco{
    display:block;
    font-size:24px;
    font-weight:bold;
}

.btn-whatsapp{
    width:100%;
    border:none;
    padding:12px;
    background: #2a190a; /*#25D366;*/
    color: #FFF;
    border-radius:6px;
    cursor:pointer;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.btn-secundario{
    background: #fff;
    color: #222;
    padding: 12px;
    display: block;
    text-align: center;
    text-decoration: none;
    border: 1px solid #ddd;
    border-radius: 6px;
}

.produto-page{
    display:grid;
    grid-template-columns:1fr 1fr;
    gap:40px;
    padding:40px;
}

.produto-page img{
    width:100%;
}

.selector {
    width: 12px;
    height: 12px;
    border-radius: 50%;
    display: inline-block;
    margin: 0 10px 0 0;
}

.novo {
    background-color: #28a745;
}

.seminovo {
    background-color: #ffc107;
}

.usado {
    background-color: #dc3545;
}

@media(max-width:768px){

    .container{
        grid-template-columns:1fr;
    }

    .produto-page{
        grid-template-columns:1fr;
    }
}

